--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
     "helmet": "^0.10.0",
+    "jwt-simple": "^0.3.0",
     "minimatch": "^2.0.10",
     "mongoose": "^4.1.2",
     "passport": "^0.2.2",
