--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "mocha": "^2.2.5",
     "should": "^7.0.4",
     "supertest": "^1.0.1"
+  },
+  "scripts": {
+    "test": "mocha",
+    "seed": "node bin/seedData.js"
   }
 }
