--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 node_modules
 typings
 npm-debug.log
+logs
 
 ### WebStorm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
