--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "jwt-simple": "^0.3.0",
     "minimatch": "^2.0.10",
     "mongoose": "^4.1.2",
+    "morgan": "^1.6.1",
     "passport": "^0.2.2",
     "passport-http-bearer": "^1.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "winston": "^1.0.1"
   },
   "devDependencies": {
     "mocha": "^2.2.5",
@@ -26,7 +28,7 @@
     "supertest": "^1.0.1"
   },
   "scripts": {
-    "test": "mocha",
+    "test": "xo && mocha",
     "seed": "node bin/seedData.js",
     "genspec": "raml2html apiSpec/apiSpec.raml > apiSpec/apiSpec.html"
   }
