--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ node_modules
 typings
 npm-debug.log
 logs
+public/dist/*
+!public/dist/.gitkeep
 
 ### WebStorm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
