--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "email": ""
   },
   "dependencies": {
+    "angular-ui-router": "^0.2.15",
     "bcrypt": "^0.8.4",
     "bluebird": "^2.9.34",
     "body-parser": "^1.13.3",
     "bootstrap": "^3.3.5",
     "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^0.8.2",
     "helmet": "^0.10.0",
     "jquery": "^2.1.4",
     "jwt-simple": "^0.3.0",
@@ -27,6 +27,8 @@
   },
   "devDependencies": {
     "css-loader": "^0.16.0",
+    "expose-loader": "^0.7.0",
+    "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "imports-loader": "^0.6.4",
     "mocha": "^2.2.5",
@@ -37,17 +39,29 @@
     "xo": "^0.7.1"
   },
   "scripts": {
+    "start": "node app.js",
     "lint": "xo",
     "test": "mocha",
     "seed": "node bin/seedData.js",
     "genspec": "raml2html apiSpec/apiSpec.raml > apiSpec/apiSpec.html"
   },
   "xo": {
-    "envs": [ "node", "browser", "mocha" ],
+    "envs": [
+      "node",
+      "browser",
+      "mocha"
+    ],
     "space": 4,
     "rules": {
       "no-irregular-whitespace": 0,
-      "curly": [ 1, "multi-or-nest" ],
+      "quotes": [
+        1,
+        "double"
+      ],
+      "curly": [
+        1,
+        "multi-or-nest"
+      ],
       "no-inline-comments": 0
     }
   }
