--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.13.3",
     "bootstrap": "^3.3.5",
     "express": "^4.13.3",
+    "express-cors": "0.0.3",
     "helmet": "^0.10.0",
     "jquery": "^2.1.4",
     "jwt-simple": "^0.3.0",
@@ -30,8 +31,12 @@
     "expose-loader": "^0.7.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
+    "html-loader": "^0.3.0",
     "imports-loader": "^0.6.4",
     "mocha": "^2.2.5",
+    "ng-cache-loader": "0.0.9",
+    "ngtemplate-loader": "^1.3.0",
+    "raw-loader": "^0.5.1",
     "should": "^7.0.4",
     "style-loader": "^0.12.3",
     "supertest": "^1.0.1",
@@ -43,7 +48,8 @@
     "lint": "xo",
     "test": "mocha",
     "seed": "node bin/seedData.js",
-    "genspec": "raml2html apiSpec/apiSpec.raml > apiSpec/apiSpec.html"
+    "genspec": "raml2html apiSpec/apiSpec.raml > apiSpec/apiSpec.html",
+    "wds": "webpack && webpack-dev-server --progress --content-base public/dist"
   },
   "xo": {
     "envs": [
