--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "angular": "^1.4.5",
+    "angular-animate": "^1.4.5",
+    "angular-toastr": "^1.5.0",
     "angular-ui-router": "^0.2.15",
     "bcrypt": "^0.8.4",
     "better-console": "^0.2.4",
