--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "email": ""
   },
   "scripts": {
-    "start": "webpack && node app.js",
+    "start": "node app.js",
+    "webpack": "webpack",
     "lint": "xo",
     "test": "mocha",
     "adminize": "node bin/adminize.js",
