--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,38 @@
-node_modules
-typings
-npm-debug.log
-logs/*
-!logs/.gitkeep
-public/dist/*
-!public/dist/.gitkeep
+# semantic
 semantic/dist
 !semantic/dist/.gitkeep
 
-### WebStorm ###
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
+# deps
+node_modules
 
-*.iml
+# typings
+typings
 
-## Directory-based project format:
-.idea/
-# if you remove the above rule, at least ignore the following:
+# static files
+public/dist/*
+!public/dist/.gitkeep
 
-# User-specific stuff:
-# .idea/workspace.xml
-# .idea/tasks.xml
-# .idea/dictionaries
+dist/*
+!dist/.gitkeep
 
-# Sensitive or high-churn files:
-# .idea/dataSources.ids
-# .idea/dataSources.xml
-# .idea/sqlDataSources.xml
-# .idea/dynamic.xml
-# .idea/uiDesigner.xml
+# project files
+*.sublime-*
 
-# Gradle:
-# .idea/gradle.xml
-# .idea/libraries
+# logs
+logs/*
+!logs/.gitkeep
+npm-debug.log*
+lerna-debug.log*
 
-# Mongo Explorer plugin:
-# .idea/mongoSettings.xml
+# idea
+.idea
 
-## File-based project format:
-*.ipr
-*.iws
+# vscode
+.vscode
 
-## Plugin-specific files:
+# osx files
+.DS_Store
+.DS_Store?
 
-# IntelliJ
-/out/
-
-# mpeltonen/sbt-idea plugin
-.idea_modules/
-
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
+# private stuff
+.env
