--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "yamljs": "^0.2.3"
   },
   "devDependencies": {
+    "buble-loader": "^0.4.0",
     "css-loader": "^0.19.0",
     "expose-loader": "^0.7.0",
     "extract-text-webpack-plugin": "^0.8.2",
