--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "angular-animate": "^1.4.5",
     "angular-toastr": "^1.5.0",
     "angular-ui-router": "^0.2.15",
-    "bcrypt": "^0.8.4",
+    "bcrypt": "^0.8.7",
     "better-console": "^0.2.4",
     "bluebird": "^2.9.34",
     "body-parser": "^1.13.3",
@@ -36,6 +36,7 @@
     "extend": "^3.0.0",
     "extend-error": "0.0.2",
     "helmet": "^0.10.0",
+    "http-status": "^1.0.1",
     "jquery": "^2.1.4",
     "jwt-simple": "^0.3.0",
     "map-stream": "0.0.6",
@@ -85,7 +86,7 @@
     "imagemin": "^3.2.0",
     "imports-loader": "^0.6.4",
     "mocha": "^2.2.5",
-    "should": "^7.0.4",
+    "should": "^7.1.1",
     "style-loader": "^0.12.4",
     "supertest": "^1.0.1",
     "url-loader": "^0.5.6",
