--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "body-parser": "^1.13.3",
     "cors": "^2.7.1",
     "del": "^2.0.0",
+    "dotenv": "^4.0.0",
     "emailjs": "^0.3.16",
     "express": "^4.13.3",
     "extend": "^3.0.0",
@@ -41,6 +42,7 @@
     "jwt-simple": "^0.3.0",
     "map-stream": "0.0.6",
     "minimatch": "^2.0.10",
+    "mongodb-uri": "^0.9.7",
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
     "passport": "^0.2.2",
