--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "start": "node app.js",
+    "dev": "nodemon app.js",
     "webpack": "webpack",
     "test": "mocha",
     "adminize": "node bin/adminize.js",
@@ -88,6 +89,7 @@
     "imagemin": "^3.2.0",
     "imports-loader": "^0.6.4",
     "mocha": "^2.2.5",
+    "nodemon": "^1.11.0",
     "should": "^7.1.1",
     "style-loader": "^0.12.4",
     "supertest": "^1.0.1",
